src/objects/Message_Request_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  SNI_FL_Message__r.Family_ID__c  , Family_Name__c, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Advisor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City/State </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family Partner</label>
        <referenceTo>Family_Partner__c</referenceTo>
        <relationshipName>Message_Request_For_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Message_Recipients__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message Recipients</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Onshore Restriction</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SNI FL Message</label>
        <referenceTo>SNI_FL_Message__c</referenceTo>
        <relationshipName>Message_Request_For_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UHG Restriction</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Message Request Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Family_Name__c</columns>
        <columns>City_State__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Coach_Lifestyle_Specialist_Message_Request_Queue</fullName>
        <columns>NAME</columns>
        <columns>Family_Name__c</columns>
        <columns>City_State__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Assigned_Advisor__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Wellness and Community Coach</label>
        <language>en_US</language>
        <queue>Coach_Lifestyle_Specialist</queue>
    </listViews>
    <listViews>
        <fullName>SENS_RN_Nurse_Message_Request_Queue</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Nurse Advisor</label>
        <queue>SENS_RN_Nurse</queue>
    </listViews>
    <listViews>
        <fullName>Women_s_Health_Nurse_Advisor_Message_Request_Queue</fullName>
        <columns>NAME</columns>
        <columns>Family_Name__c</columns>
        <columns>City_State__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Assigned_Advisor__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Women&apos;s Health Nurse Advisor</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Message Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Request Queue</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>